# fixpy

./: .coverage  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  implementation_plan.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
src/fixpy/: __init__.py  cli.py  models.py
src/fixpy/analyzers/: __init__.py  base.py  registry.py
src/fixpy/analyzers/exceptions/: __init__.py  attribute_error.py  file_not_found.py  import_error.py  index_error.py  key_error.py  name_error.py  recursion_error.py  runtime_error.py  syntax_error.py  type_error.py  value_error.py  zero_division.py
src/fixpy/formatter/: __init__.py  rich_formatter.py
src/fixpy/helpers/: __init__.py  clipboard.py  file_watcher.py  similarity.py
src/fixpy/i18n/: __init__.py  ar.py  en.py
src/fixpy/parser/: __init__.py  traceback_parser.py
tests/: __init__.py  conftest.py  test_analyzers.py  test_cli_json.py  test_formatter.py  test_parser.py
vscode-extension/: README.md  package.json
vscode-extension/src/: extension.js
