[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "fixpy-traceback"
version = "0.1.0"
description = "Smart Python traceback explainer — understand your errors instantly"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "fixpy Contributors" },
]
keywords = ["python", "debugging", "traceback", "cli", "beginner", "error-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Utilities",
]
dependencies = [
    "rich>=13.0.0",
    "typer>=0.12.0",
    "pyperclip>=1.8.0",
    "watchdog>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
]

[project.scripts]
fixpy = "fixpy.cli:app"

[project.urls]
Homepage = "https://github.com/yousseeff20/fixpy"
Documentation = "https://github.com/yousseeff20/fixpy#readme"
Repository = "https://github.com/yousseeff20/fixpy"
Issues = "https://github.com/yousseeff20/fixpy/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/fixpy"]

[tool.ruff]
target-version = "py39"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["src/fixpy"]
omit = ["tests/*"]
